--- a/layout/css/reservation.css
+++ b/layout/css/reservation.css
@@ -27,9 +27,11 @@
     align-items: center;
 }
 
+
 #searchButton, #search{
     margin-top: 0.25rem;
 }
+
 .button-container {
     display: flex; 
     flex-direction: row;
@@ -39,6 +41,8 @@
 
 #delete, #edit {
     width: 5rem;
+    margin: 0;
+
 }
 
 
