--- a/layout/css/reservation.css
+++ b/layout/css/reservation.css
@@ -46,6 +46,29 @@
 
 }
 
+.submitConfirm-container{
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(10, 20, 20, 0.5);
+    z-index: 999;
+}
+
+
+.confirmBookingU, .confirmBookingA{
+    background-color: wheat;
+    padding: 20px;
+    width: 80%;
+    color: #0A1414;
+    max-width: 400px;
+    margin: 100px auto;
+    position: relative;
+}
+
+
 
 @media (min-width: 992px) {
     .working-hours {
