--- a/layout/css/feedback.css
+++ b/layout/css/feedback.css
@@ -25,6 +25,19 @@ main .logo {
     margin-top: 0.25rem;
 }
 
+.button-container {
+    display: flex; 
+    flex-direction: row;
+    align-items: center; 
+    
+}
+
+#delete, #edit {
+    width: 5rem;
+    margin: 0;
+
+}
+
 @media (min-width: 1200px) {
     .cards {
         margin-top: 5rem;
